Removed the expectation of a certain directory structure from this test to support new Maven layout.  This test now downloads the jar files needed for the test from the main SQuirreL website.